--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "chart.js": "^3.7.1",
+    "moment": "^2.29.1",
     "rxjs": "~7.5.0",
+    "semantic-ui-css": "^2.4.1",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
